<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- activity_main -->
    <string name="app_name">Family Medicine Reminder</string>
    <string name="action_settings">Settings</string>
    <string name="btn_set_reminder">Set Reminder</string>
    <string name="btn_about_us">About Us</string>

    <!-- activity_show_patients_panel -->
    <string name="action_add_patient">Add Patient</string>
    <string name="text_activity_show_patients_panel">Family Members</string>

    <!-- activity_register_or_edit_patient_info -->
    <string name="title_activity_register_or_edit_patient_info">Member Information</string>
    <string name="text_patient_first_name">First Name</string>
    <string name="text_patient_last_name">Last Name</string>
    <string name="text_patient_age">Age</string>
    <string name="text_patient_sex">Sex</string>
    <string name="text_patient_height">Height</string>
    <string name="text_patient_weight">Weight</string>
    <string name="text_patient_notes">Notes</string>
    <string name="btn_confirm_new_patient">OK</string>
    <string name="btn_cancel_new_patient">Cancel</string>
    <string name="btn_update_patient">Update</string>
    <string name="btn_delete_patient">Delete</string>

    <!-- activity_show_prescriptions_panel -->
    <string name="title_prescription_panel">Medications</string>

    <!-- activity_add_prescription -->
    <string name="title_fragment_add_prescription">Add Prescription</string>

    <!-- fragment_add_prescription_profile -->
    <string name="title_activity_add_new_reminder_profile">Add New Reminder Profile</string>
    <string name="title_prescription_name">Medication Name:</string>
    <string name="title_prescription_dose">Dose:</string>
    <string name="title_prescription_reason">Reason for Taking Drug:</string>
    <string name="title_prescription_doctor">Prescribing Doctor:</string>
    <string name="title_take_picture">Medicine Image:</string>
    <string name="btn_take_picture">Take Picture</string>

    <!-- fragment_add_prescription_schedule -->
    <string name="title_activity_set_alarm_schedule">Set Alarm</string>
    <string name="title_activity_time_picker">TimePicker</string>
    <string name="title_schedule_start_time">Start Date:</string>
    <string name="title_schedule_end_time">End Date:</string>
    <string name="title_schedule_repeat">Alarm Frequency:</string>
    <string name="title_btn_add_reminder_times">Add Reminder Times:</string>
    <string name="btn_pick_time">Pick</string>

    <!-- activity_set_alarm_schedule -->
    <string name="title_activity_reminder_notify">Notification</string>

    <!-- activity_reminder_notify -->
    <string name="btn_accept">OK, I will take it now</string>
    <string name="btn_remind_later">Remind me Later</string>
    <string name="btn_dismiss">Dismiss</string>

    <!-- activity_calendar -->
    <string name="title_activity_calendar">Calendar</string>

    <!-- activity_browse_history -->
    <string name="title_activity_browse_history">History</string>
    <string name="text_scheduled_time">Schedule</string>
    <string name="text_actual_time">Actual Time</string>

    <string-array name="sex_array">
        <item></item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="mass_unit_array">
        <item>lb</item>
        <item>kg</item>
    </string-array>
    <string-array name="length_unit_array">
        <item>inches</item>
        <item>ft</item>
    </string-array>
    <string-array name="dose_unit_array">
        <item></item>
        <item>ounce</item>
        <item>mg</item>
        <item>ml</item>
        <item>capsule</item>
        <item>pill</item>
        <item>pack</item>
        <item>puff</item>
    </string-array>
    <string-array name="repeat_schedule_array">
        <item>Every Day</item>
        <item>Every Monday</item>
        <item>Every Tuesday</item>
        <item>Every Wednesday</item>
        <item>Every Thursday</item>
        <item>Every Friday</item>
        <item>Every Saturday</item>
        <item>Every Sunnday</item>
    </string-array>

    <string name="title_activity_show_about_us">About Us</string>

</resources>