<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dkwhite"
    android:orientation="vertical"
    tools:context=".AddPrescriptionActivity" >

    <TextView
        style="@style/TextViewStyle"
        android:text="@string/title_prescription_name" />

    <EditText
        android:id="@+id/edit_medicine_name"
        android:inputType="text"
        style="@style/EditTextStyle" />

    <TextView
        style="@style/TextViewStyle"
        android:text="@string/title_prescription_dose" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/edit_medicine_dose"
            android:inputType="number"
            style="@style/EditTextWithSpinnerStyle" />

        <Spinner
            android:id="@+id/spinner_dose_selector"
            style="@style/SpinnerWithEditTextStyle" />
    </LinearLayout>
    
    <TextView
        style="@style/TextViewStyle"
        android:text="@string/title_prescription_reason" />

    <EditText
        android:id="@+id/edit_medicine_reason"
        android:inputType="text"
        style="@style/EditTextStyle" />
    
    <TextView
        style="@style/TextViewStyle"
        android:text="@string/title_prescription_doctor" />

    <EditText
        android:id="@+id/edit_medicine_doctor"
        android:inputType="text"
        style="@style/EditTextStyle" />

    <TextView
        style="@style/TextViewStyle"
        android:text="@string/title_take_picture" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/edit_imageview"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="25dp"
            android:background="@drawable/ic_menu_camera" />

        <Button
            android:id="@+id/btn_set_medicine_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:text="@string/btn_take_picture" />
    </LinearLayout>

</LinearLayout>