<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dkwhite"
    android:scrollbars="none"
    tools:context=".RegisterOrEditPatientInfoActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:text="@string/text_patient_first_name"
            style="@style/TextViewStyle"/>
            
        <EditText
            android:id="@+id/edit_patient_first_name"
            android:inputType="text"
            style="@style/EditTextStyle"/>

        <TextView
            android:text="@string/text_patient_last_name"
            style="@style/TextViewStyle" />

        <EditText
            android:id="@+id/edit_patient_last_name"
            android:inputType="text"
            style="@style/EditTextStyle" />

        <TextView
            android:text="@string/text_patient_age"
            style="@style/TextViewStyle" />      

        <EditText
            android:id="@+id/edit_patient_age"
            android:inputType="number"
            style="@style/EditTextStyle" />

        <TextView
            android:text="@string/text_patient_sex"
            style="@style/TextViewStyle" />

        <Spinner
            android:id="@+id/spinner_sex_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/spinner_focused_holo_light"
            android:paddingLeft="10dp" />

        <TextView
            android:text="@string/text_patient_height"
            style="@style/TextViewStyle"/>     

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/edit_patient_height"
                android:inputType="number"
                style="@style/EditTextWithSpinnerStyle" />

            <Spinner
                android:id="@+id/spinner_height_selector"
                style="@style/SpinnerWithEditTextStyle" />
        </LinearLayout>

        <TextView
            android:text="@string/text_patient_weight"
            style="@style/TextViewStyle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/edit_patient_weight"
                android:inputType="number"
                style="@style/EditTextWithSpinnerStyle" />
            
            <Spinner
                android:id="@+id/spinner_weight_selector"
                style="@style/SpinnerWithEditTextStyle" />
        </LinearLayout>

        <TextView
            android:text="@string/text_patient_notes"
            style="@style/TextViewStyle" />

        <EditText
            android:id="@+id/edit_patient_notes"
            android:inputType="text"
            style="@style/EditTextStyle" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="120dp"
                android:text="@string/btn_delete_patient"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="20dp"
                android:text="@string/btn_confirm_new_patient"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>