<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dkwhite"
    android:orientation="vertical"
    tools:context=".AddPrescriptionActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/TextViewStyle"
            android:layout_width="100dp"
            android:paddingTop="10dp"
            android:text="@string/title_schedule_start_time" />

        <Button
            android:id="@+id/btn_pick_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/btn_pick_time" />
        
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/ltblue" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/TextViewStyle"
            android:layout_width="100dp"
            android:paddingTop="10dp"
            android:text="@string/title_schedule_end_time" />

        <Button
            android:id="@+id/btn_pick_end_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/btn_pick_time" />
        
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/ltblue" />
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
            style="@style/TextViewStyle"
            android:paddingTop="10dp"
            android:text="@string/title_schedule_repeat" />
        
        <Spinner
            android:id="@+id/spinner_repeat_selector"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            style="@style/SpinnerWithEditTextStyle" />
        
        </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/ltblue" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/TextViewStyle"
            android:paddingTop="10dp"
            android:text="@string/title_btn_add_reminder_times" />

        <ImageView
            android:id="@+id/btn_add_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:paddingTop="10dp"
            android:clickable="true"
            android:src="@drawable/btn_add" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/ltblue" />

    <ListView
        android:id="@+id/android:list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>