<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ltblue"
    tools:context=".MainActivity" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/hm_red_logo" />
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="25sp" />
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:text="Helps you keep track of"
        android:textColor="@color/white"
        android:textSize="15sp" />
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="230dp"
        android:text="everyone's medicine schedule"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:onClick="getStarted"
        android:text="@string/btn_set_reminder"
        android:textColor="@color/white" />
    
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="370dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:onClick="getAboutUs"
        android:text="@string/btn_about_us"
        android:textColor="@color/white" />

</RelativeLayout>