<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dkwhite"
    android:orientation="vertical"
    android:padding="10dip"
    tools:context=".ReminderNotifyActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/image_medicine_icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="10dip"
            android:src="@drawable/medicine_icon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dip"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/text_medicine_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ellipsize="marquee"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_medicine_dose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ellipsize="marquee"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/ltblue" />

    <Button 
        android:id="@+id/btn_accept"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/btn_accept"       
        style="@style/BtnStyle" />
    
    <Button 
        android:id="@+id/btn_remind_later"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"        
        android:text="@string/btn_remind_later"
        style="@style/BtnStyle" />
    
    <Button 
        android:id="@+id/btn_dismiss"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/btn_dismiss"
        style="@style/BtnStyle" />

</LinearLayout>